--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
             <ul class="feed-list" id="feedList"></ul>
         </div>
         <div id="articlesSection" class="section" style="display: none;">
-            <h2 id="articleHeader"><span id="backToFeeds">← </span><span id="currentFeedTitle">ニュース一覧</span></h2>
+            <h2 id="articleHeader"><span id="backToFeeds"></span><span id="currentFeedTitle">ニュース一覧</span></h2>
             <ul class="article-list" id="articleList"></ul>
         </div>
     </div>
